[project]
name = "vcrpy"
version = "6.0.2"
description = "VCR.py: record and replay HTTP interactions"
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.7"

# 强制解决依赖冲突：
# - 非 PyPy 使用 6.x-7.x 系列
# - PyPy 使用 1.26.x 系列
dependencies = [
    "urllib3>=6.0,<8.0 ; platform_python_implementation != 'PyPy'",
    "urllib3>=1.26.9,<2 ; platform_python_implementation == 'PyPy'",
    "chardet>=3.0.2,<5.0",
    "requests>=2.10.0,<3.0"
]

[tool.codespell]
skip = ".git,*.pdf,*.svg,.tox"
ignore-regex = "\\\\[fnrstv]"

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers"]
asyncio_default_fixture_loop_scope = "function"
markers = ["online"]

[tool.ruff]
line-length = 110
target-version = "py39"

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "COM", # flake8-commas
    "E",   # pycodestyle error
    "F",   # pyflakes
    "I",   # isort
    "ISC", # flake8-implicit-str-concat
    "PIE", # flake8-pie
    "RUF", # Ruff-specific rules
    "UP",  # pyupgrade
    "W",   # pycodestyle warning
]

[tool.ruff.lint.isort]
known-first-party = ["vcr"]
